--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,8 @@
 @import 'indexHeaderFooter';
 @import 'rightSide';
 @import 'login';
+//客服窗口样式
+@import 'customerService';
 #main{
     img{width:100%;}
     .container{
