--- a/src/sass/_customerService.scss
+++ b/src/sass/_customerService.scss
@@ -1,13 +1,23 @@
 #customerService{
-    z-index:10000000;height:507px;width:415px;border:1px solid rgb(95, 100, 103);position:absolute;bottom:0;right:0;border-radius: 5px 5px 0px 0px;background:$w;display:none;
+    z-index:10000000;height:507px;width:415px;border:1px solid #4697ef;position:absolute;bottom:0;right:0;border-radius: 5px 5px 0px 0px;background:$w;display:none;
     .touxiang{
-        z-index:0;height:42px;background: -webkit-gradient(linear, 0% 100%, 0% 0%, from(rgb(70, 151, 239)), to(rgb(103, 185, 244))) rgb(235, 233, 233);
-        img{position:absolute;border:1px solid rgb(95, 100, 103);top:-13px;left:20px;}
-        span{font-weight:900;color:$w;font-size: 12px;margin-left:80px;font-family: Arial, "Microsoft YaHei";line-height:40px;}
+        z-index:0;height:42px;background: -webkit-gradient(linear, 0% 100%, 0% 0%, from(rgb(70, 151, 239)), to(rgb(103, 185, 244))) rgb(235, 233, 233);cursor:move;
+        img{position:absolute;border:1px solid rgb(95, 100, 103);top:-13px;left:20px;height:53px;}
+        select{font-weight:900;font-size: 12px;margin-left:80px;font-family: Arial, "Microsoft YaHei";line-height:40px;height:40px;color:$w;option{color:#ccc;}}
         i{background:url('../img/index/chaticon.png');    width:20px;height:20px;margin: 13px 5px 0px 0px;display:block;cursor: pointer;float:right;z-index:1;}
-        .i1{background-position:-60px 0;}
-        .i2{background-position:-20px 0;}
-        .i3{background-position:-1px 0;}
+        .i1{
+            background-position:-60px 0;
+        }
+        .i1:hover{background-position:-60px -20px;}
+
+        .i2{
+            background-position:-20px 0;
+            &:hover{background-position:-20px -20px;}
+        }
+        .i3{
+            background-position:-1px 0;
+            &:hover{background-position:-1px -20px;}
+        }
 
     }
     .jiaoliu{
@@ -19,14 +29,14 @@
             li{
                 margin-bottom:20px;clear:both;
             }
-            .active{float:right;}
-            .leftm{float:left;}
+            .active{float:right;background:#fff;border-radius:5px; border:1px solid #4697ef;padding:5px;}
+            .leftm{float:left;background:#fff;border-radius:5px; border:1px solid #ccc;padding:5px;}
         } 
         //滚动条css样式
         &::-webkit-scrollbar{
             width: 6px;background-color: #F5F5F5;
         }
-        &::-webkit-scrollbar-thumb{border-radius: 10px;background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.44, rgb(122,153,217)), color-stop(0.72, rgb(73,125,189)), color-stop(0.86, rgb(28,58,148)));
+        &::-webkit-scrollbar-thumb{border-radius: 10px;background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.44,#5caef3), color-stop(0.72, rgb(73,125,189)), color-stop(0.86, rgb(28,58,148)));
 
         }
         &::-webkit-scrollbar-track{background-color: #ebebeb;border-radius:10px;
@@ -48,9 +58,34 @@
         
     }
     .end{float:right;margin-right:10px;
-        span{font-size:12px;}
+        span{
+            font-size:12px;
+            &:hover{color:#4697ef;cursor:pointer;}
+        }
         input{
             font-size: 12px;line-height: 26px;height: 26px;    text-align: center;padding: 0px 25px;border: 1px solid rgb(204, 204, 204);background-color: rgb(241, 241, 241);    color: rgb(0, 0, 0);    cursor: pointer; }
     }
 
 }
+select {
+  /*Chrome和Firefox里面的边框是不一样的，所以复写了一下*/
+  border:none;
+  outline:none;
+
+  /*很关键：将默认的select选择框样式清除*/
+  appearance:none;
+  -moz-appearance:none;
+  -webkit-appearance:none;
+
+  /*在选择框的最右侧中间显示小箭头图片*/
+  background: url("http://ourjs.github.io/static/2015/arrow.png") no-repeat scroll right center transparent;
+
+
+  /*为下拉小箭头留出一点位置，避免被文字覆盖*/
+  padding-right: 14px;
+  // padding-top:1px;
+}
+
+
+/*清除ie的默认选择框样式清除，隐藏下拉箭头*/
+select::-ms-expand { display: none; }
