--- a/src/css/index.css
+++ b/src/css/index.css
@@ -673,6 +673,8 @@ input, button { outline: none; }
 
 #customerService .jiaoliu::-webkit-scrollbar-track { background-color: #ebebeb; border-radius: 10px; }
 
+#customerService .fasong { position: relative; }
+
 #customerService .fasong .icons { height: 28px; border-top: 1px solid #d5d5d5; background: #f9f9f9; }
 
 #customerService .fasong .icons i, #customerService .fasong .icons input { background-image: url("../img/index/chaticon.png"); margin: 3px 0px 3px 10px; height: 22px; width: 20px; display: block; cursor: pointer; float: left; overflow: hidden; }
@@ -688,6 +690,10 @@ input, button { outline: none; }
 #customerService .fasong .ic5 { background-position: -160px 0px; }
 
 #customerService .fasong textarea { width: 393px; border: 0px solid #0088ff; box-shadow: #aaaaaa 0px 0px 5px inset; font-size: 12px; height: 73px; background-color: transparent; padding: 10px; margin: 1px; resize: none; }
+
+#customerService .fasong .bqb { position: absolute; background: #f9f9f9; height: 200px; width: 300px; }
+
+#customerService .fasong .bqb img { width: 30px; height: 30px; }
 
 #customerService .end { float: right; margin-right: 10px; }
 
